--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ W rozproszonych systemach kontroli wersji (takich jak Git, Mercurial, Bazaar lub
 
 </div>
 <footer class="panel-footer">
-Section2 footer
+<a href="http://git-scm.com/book/pl/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji#Rozproszone-systemy-kontroli-wersji">Git - podręcznik</a>
 </footer>
 </section>
 <footer class="navbar">
